--- a/app/templates/owner/declaration-mesures-continues.html.twig
+++ b/app/templates/owner/declaration-mesures-continues.html.twig
@@ -24,7 +24,7 @@
         <div class="recap-declaration-dechets">
             <ul>
                 <li>
-                {{ form_widget(form.declarationDechets.qtiteIncinereeTotale) }} T de déchets incinérés, dont:
+                {{ form_widget(form.declarationDechets.qtiteIncinereeTotale) }} <strong>T de déchets incinérés</strong>, dont:
 
                 <ul>
                     <li>{{ form_widget(form.declarationDechets.qtiteIncinereeDechetsDasri) }}T DASRI</li>
