--- a/app/templates/user/compte-rendu-declaration.html.twig
+++ b/app/templates/user/compte-rendu-declaration.html.twig
@@ -35,7 +35,7 @@ body{
 
     <div class="recap-declaration-dechets">
         {% if declaration.declarationDechets %}
-          <h3 class="title is-3">Quantité de déchets inciné</h3>
+          <h3 class="title is-3">Quantité de déchets incinérés</h3>
           <ul>
               <li>
               <strong>{{ s.displayZeroIfNull(declaration.declarationDechets.qtiteIncinereeTotale) }}</strong> T de déchets incinérés, dont:
