--- a/app/templates/inspecteur/dashboard.html.twig
+++ b/app/templates/inspecteur/dashboard.html.twig
@@ -3,7 +3,7 @@
   <section class="section">
     <div class="container">
       <h2 class="title is-2">Tableau de bord</h2>
-      <p>Bienvenue <strong>{{ app.user.username }} </strong></p>
+      {# <p>Bienvenue <strong>{{ app.user.username }} </strong></p> #}
     </div>
   </section>
 {% endblock %}
