--- a/app/templates/common/dashboard-incinerateur.html.twig
+++ b/app/templates/common/dashboard-incinerateur.html.twig
@@ -1,24 +1,27 @@
 {% if incinerateur %}
 <nav class="panel">
   <p class="panel-tabs">
-    <a class="{% if ligneId == null %}is-active{% endif %}" href="{{ url('route_dashboard') }}">Global</a>
+    <a class="{% if ligneId == null %}is-active{% endif %}" href="{{ url('route_dashboard_incinerateur', {'incinerateurId': incinerateur.id}) }}">Global</a>
     {% for ligne in incinerateur.lignes %}
-      <a class="{% if ligne.numero == ligneId %}is-active{% endif %}" href="{{ url('route_dashboard', {'ligne': ligne.numero}) }}">Ligne n°{{ ligne.numero }}</a>
+      <a class="{% if ligne.numero == ligneId %}is-active{% endif %}" href="{{ url('route_dashboard_incinerateur', {'incinerateurId': incinerateur.id, 'ligne': ligne.numero}) }}">Ligne n°{{ ligne.numero }}</a>
     {% endfor %}
   </p>
 </nav>
 
 {% if ligneId == null %}
   <h3 class="title is-3">Synthèse globale</h3>
-
+  {#
   <p>
     pouet
   </p>
-
-
+  #}
 {% else %}
 
   <h3 class="title is-3">Synthèse ligne n°{{ ligneId }}</h3>
+
+  <div>
+    <a href="#section-dioxines">Dioxines</a>
+  </div>
 
   <div>
     <h4 class="title is-4">Déclarations de mesures continues</h4>
@@ -30,15 +33,7 @@
     {% endfor %}
   </div>
 
-
-
-
-  <h3 class="title is-3">Déclarations de dioxines et furannes</h3>
-  {#
-  <div class="column">
-    <button class="button is-primary tooltip" data-tooltip="Tooltip Text">Tooltip</button>
-  </div>
-  #}
+  <h3 class="title is-3" id="section-dioxines">Déclarations de dioxines et furannes</h3>
 
   <div class="modal" id="depassement-modal">
      <div class="modal-background"></div>
