--- a/app/templates/common/dashboard-incinerateur.html.twig
+++ b/app/templates/common/dashboard-incinerateur.html.twig
@@ -20,7 +20,27 @@
   <h3 class="title is-3">Synthèse ligne n°{{ ligneId }}</h3>
 
   <div>
-    <a href="#section-dioxines">Dioxines</a>
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Dernier mois</th>
+          <th>Dernier mois</th>
+          <th>Année</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Compteurs 60h</td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td><a href="#section-dioxines">Dioxines</a></td>
+          <td></td>
+          <td></td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 
   <div>
