started preparing the table in the dashboard

--- a/app/templates/common/dashboard-incinerateur.html.twig
+++ b/app/templates/common/dashboard-incinerateur.html.twig
@@ -41,7 +41,49 @@
         </tr>
       </tbody>
     </table>
+
+
+
+
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Identifiant</th>
+          <th>Paramètres</th>
+          <th>Poussières</th>
+          <th>CO</th>
+          <th>COT</th>
+          <th>HCl</th>
+          <th>HF</th>
+          <th>SO2</th>
+          <th>NOX</th>
+          <th>NH3</th>
+          <th>Total</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+        </tr>
+      </tbody>
+    </table>
+
+
+
+
   </div>
+
+
 
   <div>
     <h4 class="title is-4">Déclarations de mesures continues</h4>
