--- a/app/templates/common/dashboard-incinerateur.html.twig
+++ b/app/templates/common/dashboard-incinerateur.html.twig
@@ -49,7 +49,6 @@
     <table class="table">
       <thead>
         <tr>
-          <th>Identifiant</th>
           <th>Paramètres</th>
           <th><a href="#section-poussieres">Poussières</a></th>
           <th><a href="#section-co">CO</a></th>
@@ -64,7 +63,6 @@
       </thead>
       <tbody>
         <tr>
-          <td>compt_art10_mensuel</td>
           <td>Dépassement VLE article 10 (h)</td>
           <td>4</td>
           <td>4</td>
@@ -77,7 +75,6 @@
           <td>4</td>
         </tr>
         <tr>
-          <td>nb_dep_c_moy_24h_mensuel</td>
           <td>Nombre de dépassements de la concentration moyenne journalière (j)</td>
           <td>4</td>
           <td>4</td>
@@ -90,11 +87,10 @@
           <td>4</td>
         </tr>
         <tr>
-          <td>nb_dep_f_24h_mensuel</td>
           <td>Nombre de dépassements du flux journalier (j)</td>
           <td>4</td>
           <td>4</td>
-          <td>4</td>
+          <td style="background-color:red">4</td>
           <td>4</td>
           <td>4</td>
           <td>4</td>
@@ -103,7 +99,6 @@
           <td>4</td>
         </tr>
         <tr>
-          <td>nb_dep_4h_mensuel</td>
           <td>Nombre de dépassements > 4h </td>
           <td>4</td>
           <td>4</td>
