cleanup of the templates

--- a/app/templates/dashboard/dashboard-incinerateur.html.twig
+++ b/app/templates/dashboard/dashboard-incinerateur.html.twig
@@ -1,228 +1,4 @@
-{% macro canvasContinu(ligneId, measureType) %}
-<div class="dioxine-canvas-container">
-  <canvas id="canvas_continu_{{ligneId}}_{{ measureType }}"></canvas>
-</div>
-{% endmacro %}
-
-{% import _self as s %}
-
-{% extends "common/base_inside.html.twig" %}
-{% block body %}
-  <section class="section">
-    <div class="container">
-       <a class="button is-primary" style="float:right; font-size:1.5em" href="{{ path('route_history', {incinerateurId: incinerateur.id }) }}">Accéder à l'historique des déclarations</a>
-
-      <h2 class="title is-2">Tableau de bord de <strong>{{incinerateur.name}}</strong></h2>
-
-
-
-        {% if incinerateur %}
-        <nav class="panel">
-          <p class="panel-tabs">
-            <a class="{% if ligneId == null %}is-active{% endif %}" href="{{ url('route_dashboard_incinerateur', {'incinerateurId': incinerateur.id}) }}">Global</a>
-            {% for ligne in incinerateur.lignes %}
-              <a class="{% if ligne.numero == ligneId %}is-active{% endif %}" href="{{ url('route_dashboard_incinerateur_ligne', {'incinerateurId': incinerateur.id, 'ligneId': ligne.numero}) }}">Ligne n°{{ ligne.numero }}</a>
-            {% endfor %}
-          </p>
-        </nav>
-
-        {% if ligneId == null %}
-          <h3 class="title is-3">Synthèse globale</h3>
-          
-        {% else %}
-
-          <h3 class="title is-3">Synthèse ligne n°{{ ligneId }}</h3>
-
-          <div>
-            <table class="table">
-              <thead>
-                <tr>
-                  <th>Dernier mois</th>
-                  <th>Dernier mois</th>
-                  <th>Année</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>Compteurs 60h</td>
-                  <td></td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td><a href="#section-dioxines">Dioxines</a></td>
-                  <td></td>
-                  <td></td>
-                </tr>
-              </tbody>
-            </table>
-
-            <table class="table">
-              <thead>
-                <tr>
-                  <th>Paramètres</th>
-                  <th><a href="#section-poussieres">Poussières</a></th>
-                  <th><a href="#section-co">CO</a></th>
-                  <th><a href="#section-cot">COT</a></th>
-                  <th><a href="#section-hcl">HCl</a></th>
-                  <th><a href="#section-hf">HF</a></th>
-                  <th><a href="#section-so2">SO2</a></th>
-                  <th><a href="#section-nox">NOX</a></th>
-                  <th><a href="#section-nh3">NH3</a></th>
-                  <th>Total</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>Dépassement VLE article 10 (h)</td>
-                  <td>4</td>
-                  <td>4</td>
-                  <td>4</td>
-                  <td>4</td>
-                  <td>4</td>
-                  <td>4</td>
-                  <td>4</td>
-                  <td>4</td>
-                  <td>4</td>
-                </tr>
-                <tr>
-                  <td>Nombre de dépassements de la concentration moyenne journalière (j)</td>
-                  <td>4</td>
-                  <td>4</td>
-                  <td>4</td>
-                  <td>4</td>
-                  <td>4</td>
-                  <td>4</td>
-                  <td>4</td>
-                  <td>4</td>
-                  <td>4</td>
-                </tr>
-                <tr>
-                  <td>Nombre de dépassements du flux journalier (j)</td>
-                  <td>4</td>
-                  <td>4</td>
-                  <td style="background-color:red">4</td>
-                  <td>4</td>
-                  <td>4</td>
-                  <td>4</td>
-                  <td>4</td>
-                  <td>4</td>
-                  <td>4</td>
-                </tr>
-                <tr>
-                  <td>Nombre de dépassements > 4h </td>
-                  <td>4</td>
-                  <td>4</td>
-                  <td>4</td>
-                  <td>4</td>
-                  <td>4</td>
-                  <td>4</td>
-                  <td>4</td>
-                  <td>4</td>
-                  <td>4</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-
-          <div>
-            <h4 class="title is-4">Déclarations de mesures continues</h4>
-            {# We want an explicit list of the graphs #}
-            
-            <h5 class="is-h5" id="section-poussieres">Poussières</h5>
-            {{ s.canvasContinu(ligneId, 'psr_c_24h_moy') }}
-            <h5 class="is-h5" id="section-co">CO</h5>
-            {{ s.canvasContinu(ligneId, 'co_c_24h_moy') }}
-            <h5 class="is-h5" id="section-cot">COT</h5>
-            {{ s.canvasContinu(ligneId, 'cot_c_24h_moy') }}
-            <h5 class="is-h5" id="section-hcl">HCL</h5>
-            {{ s.canvasContinu(ligneId, 'hcl_c_24h_moy') }}
-            <h5 class="is-h5" id="section-hf">HF</h5>
-            {{ s.canvasContinu(ligneId, 'hf_c_24h_moy') }}
-            <h5 class="is-h5" id="section-so2">SO2</h5>
-            {{ s.canvasContinu(ligneId, 'so2_c_24h_moy') }}
-            <h5 class="is-h5" id="section-nox">NOX</h5>
-            {{ s.canvasContinu(ligneId, 'nox_c_24h_moy') }}
-            <h5 class="is-h5" id="section-nh3">NH3</h5>
-            {{ s.canvasContinu(ligneId, 'nh3_c_24h_moy') }}
-
-          </div>
-
-          <h3 class="title is-3" id="section-dioxines">Déclarations de dioxines et furannes</h3>
-
-          <div class="modal" id="depassement-modal">
-             <div class="modal-background"></div>
-             <div class="modal-card">
-              <header class="modal-card-head">
-                <p class="modal-card-title">En cas de dépassement</p>
-                <button class="delete close-depassement-modal" aria-label="close"></button>
-              </header>
-              <section class="modal-card-body">
-              <p>En cas de dépassements sur la mesure en semi-continu des dioxines et furannes, l'exploitant doit :
-              <ul>
-                <li>Avertir l'inspection des installations classées dans les meilleurs délais.</li>
-                <li>Faire réaliser un contrôle ponctuel à l'émission des dioxines et furannes par un organisme agréé sous 10 jours.</li>
-                <li>Le résultat des mesures en semi-continu ne permet pas de fonder l'engagement des procédures administratives prévues à l'article L. 514-1 du code de l'environnement.</li>
-              </ul>
-
-              Références :
-              <ul>
-                  <li>Article 28 b1) de l'AM du 20/09/2002</a>
-                    <span class="tag is-link">
-                      <a href="https://aida.ineris.fr/consultation_document/5277#Article_28_nouveau">lien</a>
-                    </span>
-                  </li>
-                  <li>la note DGPR du 28 février 2011</li>
-              </ul>
-              </p>
-             </section>
-             </div>
-          </div>
-
-          <p>Référence réglementaire : <a href="https://aida.ineris.fr/consultation_document/5277#Annexe_I">AM 20/09/2002, Annexe I d)</a></p> <button class="button" id="open-depassement-modal">Que faire en cas de dépassement ?</button>
-
-          </p>
-
-              <div >
-                <div class="dioxine-canvas-container">
-                  <canvas id="canvas_dioxine_{{ligneId}}"></canvas>
-                </div>
-              </div>
-          {% endif %}
-
-          <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.min.js"></script>
-          <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-annotation/0.5.5/chartjs-plugin-annotation.js"></script>
-          <script src="https://cdn.rawgit.com/chartjs/Chart.js/master/samples/utils.js"></script>
-          <script src="{{ asset('build/static/js/customcharts.js') }}"></script>
-            
-          <script>
-          var reportData = {{ dashboardReport|json_encode()|raw }}
-          var dioxineDashboardData = {{ dioxineGraphData|json_encode()|raw }}
-
-          window.onload = function() {
-              addDioxinesChart({{ ligneId }});
-              {% for measureType in expectedGraphs %}
-                addMesureChart({{ ligneId }}, '{{ measureType }}');
-              {% endfor %}
-
-            $("#open-depassement-modal").click(function() {
-              $("#depassement-modal").addClass("is-active");  
-            });
-
-            $(".close-depassement-modal").click(function() {
-               $("#depassement-modal").removeClass("is-active");
-            });
-          };
-
-          </script>
-        {% endif %}
-
-
-
-
-
-
-       <a class="button is-primary" style="float:right; font-size:1.5em" href="{{ path('route_history', {incinerateurId: incinerateur.id }) }}">Accéder à l'historique des déclarations</a>
-
-    </div>
-  </section>
+{% extends "dashboard/base_dashboard.html.twig" %}
+{% block dashboard %}
+<h3 class="title is-3">Synthèse globale</h3>
 {% endblock %}
